# maige

./: .dir-locals.el  .gitignore  LICENSE.md  Pipfile  README.md  pyproject.toml  requirements.txt  simple_test.py
generativeart/: functions.py  generator.py
maige/: __init__.py  functions.py  generator.py  photo_generator.py
